# care-sync

./: .env  .gitignore  README.md  agent-debug.sh  docker-compose.yml  down.sh  envexample  error-simulations.md  fire-check.sh  foo.sh  medbridge-vitacare-expired.http  pyproject.toml  reaload-by-service.sh  run-no-cache.sh  run.sh
agents/: Dockerfile  config.py  graph.py  main.py  requirements.txt  testing-llm.py
agents/agents/: doc_reader.py  error_checker.py
agents/memory/: error_dedup.py  knowledge_base_indexer.py  mapping_cache.py
agents/models/: error_report.py  fhir_resource.py  (+3 more)
core-lab/: config.py  main.py  requirements.txt
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
iris/: Dockerfile  iris.script
mcp-database-server-iris/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
mcp-database-server-iris/deploy/: docker-manage.sh
mcp-database-server-iris/mcp/: Dockerfile  docker-compose.yml  run.sh  test.sh
mcp-database-server-iris/src/mcp_server_iris/: __init__.py  __main__.py  http_server.py  interoperability.py  server.py
notes/: fhir-usage-related-to-agent.mk  fhir.mk  notes.txt  request-test.mk
python_code_rag/: .gitignore  Dockerfile  README.md  phase3-issues.md  pyproject.toml  ragit.http  start.sh  test-mcp.sh
python_code_rag/app/: chunker.py  config.py  embedder.py  main.py  retriever.py  store.py
python_code_rag/app/routers/: index.py
python_code_rag/mcp_server/: __main__.py  http_server.py  server.py
ref-lab/: Dockerfile  config.py  main.py
vita-care/: Dockerfile  main.py
(+66 files in other folders)
